control-plane-infra/modules/control-plane/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-plane
  namespace: ${namespace}
  labels:
    app: control-plane
spec:
  replicas: ${replicas}
  selector:
    matchLabels:
      app: control-plane
  template:
    metadata:
      labels:
        app: control-plane
    spec:
      serviceAccountName: control-plane
      containers:
        - name: control-plane
          image: ${image}
          ports:
            - containerPort: 8080
