control-plane-infra/modules/control-plane/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-plane-frontend
  namespace: ${namespace}
spec:
  selector:
    app: control-plane-frontend
  ports:
    - port: 3000
      targetPort: 3000
