control-plane-infra/modules/control-plane/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-plane
  namespace: ${namespace}
spec:
  selector:
    app: control-plane
  ports:
    - port: 8080
      targetPort: 8080
