control-plane-infra/modules/control-plane/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: control-plane
  namespace: ${namespace}
  annotations:
    tailscale.com/hostname: ${tailscale_hostname}
spec:
  ingressClassName: tailscale
  rules:
    - host: ${tailscale_hostname}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: control-plane
                port:
                  number: 8080
  tls:
    - hosts:
        - ${tailscale_hostname}
